# tailendcharlie

./: CONTRIBUTING.md  Makefile  PLAN.md  README.md  SECURITY.md
.claude/: launch.json
.github/workflows/: android-internal.yml  deploy-website.yml  mobile.yml  server.yml  testflight.yml
apps/mobile/: README.md  pubspec.yaml
apps/planner/: README.md  app.js  index.html  styles.css
apps/server/: .env.example  README.md  pyproject.toml
apps/server/alembic/versions/: 0003_ride_plans.py  0004_discovery_moderation.py  0006_observer_access.py
apps/server/src/ride_relay_server/: __init__.py  app.py  cleanup.py  config.py  gpx.py  models.py  observer.py  schemas.py  service.py
apps/server/tests/: conftest.py  test_compatibility.py  test_join_codes.py  test_observer_access.py  test_plans.py  test_sync.py
apps/website/: README.md  _headers  index.html  observer-core.mjs  observer-core.test.mjs  observer.css  observer.html  observer.js  planner-core.mjs  planner-core.test.mjs  planner-plan.mjs  planner-plan.test.mjs  planner-storage.mjs  planner-ui.test.mjs  (+7 more)
deploy/: .env.example  Caddyfile  Caddyfile.preproduction  compose.preproduction.yaml  compose.yaml  preproduction.env.example
docs/: architecture.md  cross-app-mini-map-decision.md  field-test-plan.md  internet-relay.md  maps-and-gpx.md  motorcycle-discovery-data.md  navigation-export.md  nearby-relay.md  next-agent-handoff.md  observer-access.md  release-signing.md  ride-simulator.md  route-twistiness.md  server-runbook.md  tester-release-2026-07-23.md  uk-enforcement-data-decision.md
marketing/: README.md
(+140 files in other folders)
