[project]
name = "ride-relay-server"
version = "0.1.0"
description = "Privacy-bounded internet relay for Tail End Charlie"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16,<2",
  "cryptography>=45,<47",
  "fastapi>=0.116,<1",
  "prometheus-client>=0.22,<1",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.10,<3",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.4,<9",
  "pytest-cov>=6.2,<7",
  "ruff>=0.12,<1",
]

[project.scripts]
ride-relay-server = "ride_relay_server.__main__:main"
ride-relay-cleanup = "ride_relay_server.cleanup:main"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ride_relay_server"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "RUF"]
ignore = ["B008", "S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S105", "S106"]
